--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,32 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/alpine
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "name": "RealWorldExample",
+
+  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "build": {
+    // Path is relative to the devcontainer.json file.
+    "dockerfile": "Dockerfile"
+  },
+ // Features to add to the dev container. More info: https://containers.dev/features.
   "features": {
     "ghcr.io/devcontainers/features/node:1": {
-    "version": "8"
+      "nodeGypDependencies": true,      "version": "lts/dubnium",
+      "nvmVersion": "latest"
     }
-  }
+  },
+
+  // "postCreateCommand": ". ${NVM_DIR}/nvm.sh && nvm install lts/dubnium",
+  "postStartCommand": ". ${NVM_DIR}/nvm.sh && nvm use lts/dubnium && npm install -g gulp@3"
+
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  // "forwardPorts": [],
+  // Use 'postCreateCommand' to run commands after the container is created.
+  // "postCreateCommand": "uname -a",
+
+  // Configure tool-specific properties.
+  // "customizations": {},
+
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  // "remoteUser": "root"
 }
